k8s/default/test/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "test.rolancia.com"
  - port:
      number: 443
      name: test-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "test-cert"
    hosts:
    - "test.rolancia.com"
