k8s/default/test/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-ingress
  namespace: default
spec:
  hosts: 
  - 'test.rolancia.com'
  gateways:
  - test-gateway
  http:
  - route:
    - destination: 
        host: echo
